# AMBEHub-2026

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  serial_raw  trabajo_hoy.patch
config/: ambehub.ini
include/: Config.h  Logger.h
include/audio/: PCMGenerator.h
include/client/: AMBEHubClient.h
include/codec/: CodecEngine.h  CodecJob.h  CodecJobQueue.h
include/core/: AMBEHubCore.h
include/device/: AMBE3000Device.h  DeviceManager.h  DummyDevice.h  IDevice.h  SerialPort.h
include/network/: SocketUDP.h  UDPServer.h
include/protocol/: AMBE3000Protocol.h  AMBEFrame.h  AMBEVoiceFrame.h  DV3KAudioProtocol.h  DV3KCommands.h  DV3KResponse.h  Messages.h  PCMFrame.h  Packet.h  PacketDispatcher.h  PacketSerializer.h
include/server/: AMBEHubServer.h
include/session/: Session.h  SessionManager.h
src/: Config.cpp  Logger.cpp  main.cpp
src/audio/: PCMGenerator.cpp
src/client/: AMBEHubClient.cpp  main.cpp
src/codec/: CodecEngine.cpp  CodecJob.cpp  CodecJobQueue.cpp
src/core/: AMBEHubCore.cpp
src/device/: AMBE3000Device.cpp  DeviceManager.cpp  DummyDevice.cpp  SerialPort.cpp
src/network/: SocketUDP.cpp  UDPServer.cpp
src/protocol/: AMBE3000Protocol.cpp  AMBEFrame.cpp  AMBEVoiceFrame.cpp  DV3KAudioProtocol.cpp  DV3KResponse.cpp  PCMFrame.cpp  Packet.cpp  PacketDispatcher.cpp  PacketSerializer.cpp
src/server/: AMBEHubServer.cpp
src/session/: Session.cpp  SessionManager.cpp
tools/: ambe_codec_test.cpp  ambe_diag.cpp  ambe_pcm_test.cpp  serial_raw.cpp
